<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SportsQuiz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="level">Level</string>
    <string name="points">Points</string>
    <string name="lives">Lives</string>
    <string name="football">Football</string>
    <string name="hokey">Hockey</string>
    <string name="fight">Fight</string>
    <string name="basketball">Basketball</string>
    <string name="football_quiz">Football Quiz</string>
    <string name="available_tests">Available tests</string>
    <string name="topic">Topic</string>
    <string name="not_passed">Not passed</string>
    <string name="category">Category:</string>
    <string name="questions">Questions:</string>
    <string name="leveL">Level:</string>
    <string name="possible_points">Possible points</string>
    <string name="play">Start the game</string>
    <string name="close">Close</string>
    <string name="correct_guess">Correct guess</string>
    <string name="wrong_guess">Wrong guess</string>
    <string name="next">Next</string>
    <string name="quiz">Quiz Sports</string>
    <string name="finish">End quiz</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_won_the_game_by_guessing_all_scrum_results_correctly">You won the game by guessing all scrum results correctly!</string>
    <string name="defeat">Defeat!</string>
    <string name="you_haven_t_answered_all_the_questions_try_taking_the_test_again">You haven\'t answered all the questions. Try taking the test again.</string>
    <string name="finish_bt">Finish</string>
    <string name="quiz_nsport">Sport Quiz</string>
    <string name="enter_a_name">Enter name</string>
    <string name="enter_your_last_name">Enter your last name</string>
    <string name="welcome">Welcome!</string>
    <string name="text_onbording_second">The application has four blocks with tests: football, basketball, hockey and boxing. Now you have access to the block for passing the tests Football, when you earn 1000 points, then you will open the block Hockey and so on.</string>
    <string name="text_onboarding_third">The application gives three lives to pass the tests. Once they run out, you need to wait an hour for them to update.</string>
    <string name="_7_aug_2023">7 aug 2023</string>
    <string name="tests">Tests</string>
    <string name="lives_">Lives</string>
    <string name="_0">0</string>
    <string name="sport_nquizs">Sport\nQuizs</string>
    <string name="in_the_sports_quizzes_app_you_can_take_tests_in_different_sports">In the Sports Quizzes app, you can take tests in different sports.</string>
    <string name="point_no" tools:ignore="StringEscaping">You don\'t have enough points!</string>
    <string name="lives_no" tools:ignore="StringEscaping">You don\'t have enough lives! Wait for the update</string>
</resources>