<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="40dp"
    tools:context=".presentation.NameFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz_nsport"
        android:textSize="60sp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="#fdc74b"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_bame"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/bg_test_options"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/enter_a_name"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        android:textColor="#2d2d2d"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/title"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <EditText
        android:id="@+id/et_surname"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/bg_test_options"
        android:ems="10"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/enter_your_last_name"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        android:textColor="#2d2d2d"
        app:layout_constraintEnd_toEndOf="@+id/et_bame"
        app:layout_constraintStart_toStartOf="@+id/et_bame"
        app:layout_constraintTop_toBottomOf="@+id/et_bame" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_full_screen"
        app:layout_constraintEnd_toEndOf="@+id/et_surname"
        app:layout_constraintTop_toBottomOf="@+id/et_surname">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:fontFamily="@font/poppins_semibold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>